# cuda-sage

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: analysis-guide.md  api-reference.md  architecture-specs.md
src/cudasage/: __init__.py  cli.py  gui.py  reporter.py
src/cudasage/analyzers/: __init__.py  divergence.py  memory.py  occupancy.py
src/cudasage/codegen/: triton_gen.py
src/cudasage/models/: __init__.py  architectures.py
src/cudasage/parsers/: __init__.py  ptx_parser.py
src/cudasage/transform/: __init__.py  source_transform.py
src/cudasage/tune/: __init__.py  benchmark.py  cache.py  parameter.py
tests/: conftest.py  test_cli.py  test_codegen.py  test_divergence.py  test_fixtures.py  test_memory.py  test_occupancy.py  test_parser.py  test_public_api.py  test_reporter.py  test_transform.py  test_tune.py
tests/fixtures/: divergent_kernel.ptx  matmul.ptx  matmul_naive.cu  reduction.ptx  vecadd.cu  vecadd.ptx
