[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cuda-sage"
version = "0.2.0"
description = "CUDA/PTX Static Analysis & Guidance Engine — catch GPU performance issues before touching hardware"
requires-python = ">=3.11"
license = {text = "MIT"}
keywords = ["cuda", "ptx", "gpu", "static-analysis", "occupancy", "warp-divergence"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Build Tools",
]
dependencies = [
    "typer>=0.12",
    "rich>=13",
]

[project.urls]
Homepage = "https://github.com/hkevin01/cuda-sage"
Repository = "https://github.com/hkevin01/cuda-sage"
Issues = "https://github.com/hkevin01/cuda-sage/issues"
Changelog = "https://github.com/hkevin01/cuda-sage/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-cov>=5"]

[project.scripts]
cuda-sage = "cudasage.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]
